--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -1,21 +1,65 @@
 @font-face {
-  font-family: "Open Sans";
+  font-family:'rouble';
   font-style: normal;
   font-weight: 400;
   src:
-    local("Open Sans"),
-    local("OpenSans"),
-    url("../../fonts/opensans.woff2") format("woff2"),
-    url("../../fonts/opensans.woff") format("woff");
+    url('../fonts/rouble.woff') format('woff'),
+    url("../fonts/rouble.ttf") format("truetype");
 }
 
 @font-face {
-  font-family: "Open Sans";
+  font-family:'Exo 2';
+  font-style: normal;
+  font-weight: 400;
+  src:
+    local("Exo 2"),
+    local("Exo2"),
+    url("../fonts/exo2-regular.eot?") format("embedded-opentype"),
+    url("../fonts/Exo2-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family:'Exo 2';
   font-style: normal;
   font-weight: 700;
   src:
-    local("Open Sans Bold"),
-    local("OpenSans-Bold"),
-    url("../../fonts/opensansbold.woff2") format("woff2"),
-    url("../../fonts/opensansbold.woff") format("woff");
+    local("Exo 2 Bold"),
+    local("Exo2-Bold"),
+    url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
+    url("../fonts/Exo2-Bold.ttf") format("truetype");
 }
+
+@font-face {
+  font-family:'Exo 2';
+  font-style: italic;
+  font-weight: 700;
+  src:
+    local("Exo 2 Bold Italic"),
+    local("Exo2-Bold-Italic"),
+    //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
+    url("../fonts/Exo2-BoldItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family:'Exo 2';
+  font-style: italic;
+  font-weight: 300;
+  src:
+    local("Exo 2 Medium Italic"),
+    local("Exo2-Medium-Italic"),
+      //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
+    url("../fonts/Exo2-MediumItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family:'Exo 2';
+  font-style: normal;
+  font-weight: 300;
+  src:
+    local("Exo 2 Medium "),
+    local("Exo2-Medium"),
+      //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
+    url("../fonts/Exo2-Medium.ttf") format("truetype");
+}
+
+
