--- a/less/style.less
+++ b/less/style.less
@@ -2,3 +2,8 @@
 @import "variables.less";
 @import "global/fonts.less";
 @import "global/base.less";
+@import "blocks/header.less";
+@import "blocks/main-nav.less";
+@import "blocks/experience.less";
+@import "blocks/total-earnings.less";
+@import "blocks/format.less";
