--- a/less/global/base.less
+++ b/less/global/base.less
@@ -1,31 +1,32 @@
 body {
-  font-family: "Open Sans", "Arial", sans-serif;
+  font-family: "Exo 2", "Arial", sans-serif;
   background-color: #fff;
-  color: #000000;
+  color: #0d0d0d;
+  line-height: 1.5;
 }
 
 h1 {
-  font-size: 27px;
-  line-height: 30px;
+  font-size: 65px;
   color: #231f20;
-  font-weight: bold;
-  text-align: center;
   margin: 0;
+  line-height: 1.03;
+  font-weight: bold;
+  font-style: italic;
 }
 
 h2 {
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 51px;
+  line-height: 51px;
   color: #000000;
   font-weight: bold;
+  font-style: italic;
   margin: 0;
 }
 
 h3 {
-  font-size: 17px;
+  font-size: 31px;
   margin: 0;
-  font-weight: bold;
-  line-height: 24px;
+  line-height: 37px;
 }
 
 a {
@@ -35,4 +36,79 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+p {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  padding-top: 30px;
+}
+
+.bottom-line{
+  position: relative;
+  &:before{
+    position: absolute;
+    content: '';
+    display: block;
+    left: 0;
+    width: 230px;
+    height: 4px;
+    background-color: #ffe200;
+    bottom: -15px;
+    border-radius: 50px;
+  }
+  &--header:before{
+    width: 389.5px;
+  }
+}
+
+button{
+  font-size: 20px;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1.5;
+  text-align: center;
+  color: #0d0d0d;
+  padding: 9px 50px ;
+  background-color: @yellow-color;
+  box-shadow: 0 3px 0 0 #a87e00;
+  border: none;
+  border-radius: 5px;
+}
+.phone-number{
+  position: relative;
+  display: block;
+  color: #fff;
+  font-family: Arial;
+  font-size: 24px;
+  padding-left: 18px;
+  padding-bottom: 15px;
+  &:before{
+    position: absolute;
+    left: 0;
+    content: '';
+    top: 7px;
+    display: block;
+    width: 15px;
+    height: 36px;
+    background-color: #000000;
+  }
+  &:after{
+    position: absolute;
+    left: 18px;
+    font-weight: normal;
+    font-style: italic;
+    content: 'Или позвоните основателю';
+    bottom: 4px;
+    font-size: 13px;
+    display: block;
+  }
+}
+.subtitle{
+  font-family: Arial;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: left;
+  color: #0d0d0d;
 }
