--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,7 @@
 @tablet-widths: ~"(min-width: 768px)";
 @desktop-widths: ~"(min-width: 1150px)";
 @mobile-widths-only: ~"(max-width: 767px)";
-@mint-color: #63d1bb;
+@yellow-color: #FFE200;
 
 .visually-hidden {
   position: absolute;
