--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -6,8 +6,8 @@
   padding: 0;
   font-family: Arial;
   &:hover{
-    color: #ffe200;
-    border-bottom: 1px solid #ffe200;
+    color: @yellow-color;
+    border-bottom: 1px solid @yellow-color;
     transition: .3s;
   }
 }
