--- a/less/blocks/total-earnings.less
+++ b/less/blocks/total-earnings.less
@@ -7,6 +7,8 @@
 .total-earnings__numbets {
   display: inline-block;
   position: relative;
+  font-style: italic;
+  font-weight: bold;
   &:before {
     bottom: 0;
     left: 0;
