--- a/less/global/fonts.less
+++ b/less/global/fonts.less
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src:
-    url('../fonts/rouble.woff') format('woff'),
+    //url('../fonts/rouble.woff') format('woff'),
     url("../fonts/rouble.ttf") format("truetype");
 }
 
@@ -14,8 +14,19 @@
   src:
     local("Exo 2"),
     local("Exo2"),
-    url("../fonts/exo2-regular.eot?") format("embedded-opentype"),
-    url("../fonts/Exo2-Regular.ttf") format("truetype");
+    url("../fonts/Exo2.0-Regular.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-Regular.ttf") format("truetype");
+}
+
+@font-face {
+  font-family:'Exo 2';
+  font-style: italic;
+  font-weight: 400;
+  src:
+    local("Exo 2"),
+    local("Exo2"),
+    url("../fonts/Exo2.0-Italic.otf?") format("embedded-opentype"),
+  url("../fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
 
 @font-face {
@@ -25,8 +36,8 @@
   src:
     local("Exo 2 Bold"),
     local("Exo2-Bold"),
-    url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
-    url("../fonts/Exo2-Bold.ttf") format("truetype");
+    url("../fonts/Exo2.0-Bold.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
 
 @font-face {
@@ -36,9 +47,31 @@
   src:
     local("Exo 2 Bold Italic"),
     local("Exo2-Bold-Italic"),
-    //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
-    url("../fonts/Exo2-BoldItalic.ttf") format("truetype");
+    url("../fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
+
+//@font-face {
+//  font-family:'Exo 2';
+//  font-style: italic;
+//  font-weight: 500;
+//  src:
+//    local("Exo 2 Medium Italic"),
+//    local("Exo2-Medium-Italic"),
+//      url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
+//    url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+//}
+//
+//@font-face {
+//  font-family:'Exo 2';
+//  font-style: normal;
+//  font-weight: 500;
+//  src:
+//    local("Exo 2 Medium "),
+//    local("Exo2-Medium"),
+//      url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+//    url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
+//}
 
 @font-face {
   font-family:'Exo 2';
@@ -47,8 +80,8 @@
   src:
     local("Exo 2 Medium Italic"),
     local("Exo2-Medium-Italic"),
-      //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
-    url("../fonts/Exo2-MediumItalic.ttf") format("truetype");
+    url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 
 @font-face {
@@ -58,8 +91,29 @@
   src:
     local("Exo 2 Medium "),
     local("Exo2-Medium"),
-      //url("../fonts/exo2-bold.eot?") format("embedded-opentype"),
-    url("../fonts/Exo2-Medium.ttf") format("truetype");
+    url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 
+@font-face {
+  font-family:'Exo 2';
+  font-style: italic;
+  font-weight: 900;
+  src:
+    local("Exo 2 Black Italic"),
+    local("Exo2-Medium-Italic"),
+    url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+}
+
+@font-face {
+  font-family:'Exo 2';
+  font-style: normal;
+  font-weight: 900;
+  src:
+    local("Exo 2 Black "),
+    local("Exo2-Black"),
+    url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"),
+    url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
+}
 
