--- a/less/style.less
+++ b/less/style.less
@@ -7,3 +7,9 @@
 @import "blocks/experience.less";
 @import "blocks/total-earnings.less";
 @import "blocks/format.less";
+@import "blocks/chains-stores.less";
+@import "blocks/icons-row.less";
+@import "blocks/essence.less";
+@import "blocks/sell.less";
+@import "blocks/care.less";
+@import "blocks/proposal.less";
