--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,9 @@
 @desktop-widths: ~"(min-width: 1150px)";
 @mobile-widths-only: ~"(max-width: 767px)";
 @yellow-color: #FFE200;
+@text-color: #0d0d0d;
+@arial: 'Arial', sans-serif;
+@exo: "Exo 2", sans-serif;
 
 .visually-hidden {
   position: absolute;
