--- a/css/style.css
+++ b/css/style.css
@@ -421,37 +421,55 @@ template {
   font-family: 'rouble';
   font-style: normal;
   font-weight: 400;
-  src: url('../fonts/rouble.woff') format('woff'), url("../fonts/rouble.ttf") format("truetype");
+  src: url("../fonts/rouble.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 400;
-  src: local("Exo 2"), local("Exo2"), url("../fonts/exo2-regular.eot?") format("embedded-opentype"), url("../fonts/Exo2-Regular.ttf") format("truetype");
+  src: local("Exo 2"), local("Exo2"), url("../fonts/Exo2.0-Regular.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Exo 2';
+  font-style: italic;
+  font-weight: 400;
+  src: local("Exo 2"), local("Exo2"), url("../fonts/Exo2.0-Italic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 700;
-  src: local("Exo 2 Bold"), local("Exo2-Bold"), url("../fonts/exo2-bold.eot?") format("embedded-opentype"), url("../fonts/Exo2-Bold.ttf") format("truetype");
+  src: local("Exo 2 Bold"), local("Exo2-Bold"), url("../fonts/Exo2.0-Bold.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 700;
-  src: local("Exo 2 Bold Italic"), local("Exo2-Bold-Italic"), url("../fonts/Exo2-BoldItalic.ttf") format("truetype");
+  src: local("Exo 2 Bold Italic"), local("Exo2-Bold-Italic"), url("../fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: italic;
   font-weight: 300;
-  src: local("Exo 2 Medium Italic"), local("Exo2-Medium-Italic"), url("../fonts/Exo2-MediumItalic.ttf") format("truetype");
+  src: local("Exo 2 Medium Italic"), local("Exo2-Medium-Italic"), url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 300;
-  src: local("Exo 2 Medium "), local("Exo2-Medium"), url("../fonts/Exo2-Medium.ttf") format("truetype");
+  src: local("Exo 2 Medium "), local("Exo2-Medium"), url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Exo 2';
+  font-style: italic;
+  font-weight: 900;
+  src: local("Exo 2 Black Italic"), local("Exo2-Medium-Italic"), url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 900;
+  src: local("Exo 2 Black "), local("Exo2-Black"), url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 body {
   font-family: "Exo 2", "Arial", sans-serif;
@@ -471,7 +489,7 @@ h2 {
   font-size: 51px;
   line-height: 51px;
   color: #000000;
-  font-weight: bold;
+  font-weight: 900;
   font-style: italic;
   margin: 0;
 }
@@ -487,11 +505,27 @@ img {
   max-width: 100%;
   height: auto;
 }
+li {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
 p {
   font-family: Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  padding-top: 15px;
+  margin-bottom: 0;
+}
+.subtitle {
   padding-top: 30px;
+}
+.subtitle--bold {
+  font-weight: bold;
 }
 .bottom-line {
   position: relative;
@@ -509,6 +543,9 @@ p {
 }
 .bottom-line--header:before {
   width: 389.5px;
+}
+.bottom-line--big-number:before {
+  left: 15px;
 }
 button {
   font-size: 20px;
@@ -552,12 +589,29 @@ button {
   font-size: 13px;
   display: block;
 }
+.phone-number--black {
+  color: #000;
+}
 .subtitle {
   font-family: Arial;
   font-size: 16px;
   line-height: 1.5;
   text-align: left;
   color: #0d0d0d;
+}
+.big-number {
+  font-size: 108px;
+  font-weight: 900;
+  font-style: italic;
+  line-height: 1;
+}
+.grey-text {
+  font-family: Arial;
+  font-size: 16px;
+  font-style: italic;
+  line-height: 1.5;
+  text-align: left;
+  color: #7b7b7b;
 }
 .page-header {
   background: url("/img/header-bg.jpg");
@@ -659,8 +713,8 @@ button {
   font-family: Arial;
 }
 .main-nav__link:hover {
-  color: #ffe200;
-  border-bottom: 1px solid #ffe200;
+  color: #FFE200;
+  border-bottom: 1px solid #FFE200;
   transition: .3s;
 }
 .main-nav__item {
@@ -724,6 +778,8 @@ button {
 .total-earnings__numbets {
   display: inline-block;
   position: relative;
+  font-style: italic;
+  font-weight: bold;
 }
 .total-earnings__numbets:before {
   bottom: 0;
@@ -784,6 +840,7 @@ button {
   font-family: Arial;
   font-size: 16px;
   text-align: center;
+  padding-bottom: 10px;
 }
 .format-item__cost {
   padding-top: 30px;
@@ -801,4 +858,347 @@ button {
   font-style: italic;
   padding-left: 40px;
   padding-right: 40px;
+}
+.chains-stores {
+  padding-top: 180px;
+  position: relative;
+}
+.chains-stores:before {
+  position: absolute;
+  width: 90%;
+  display: block;
+  content: '';
+  top: 120px;
+  left: 5%;
+  background-color: #EFEFEF;
+  height: 55%;
+  border-radius: 5px;
+}
+.chains-stores__opening {
+  padding-top: 20px;
+  font-family: Arial;
+  font-size: 22px;
+  font-style: italic;
+  line-height: 1.32;
+  text-align: center;
+  padding-right: 80px;
+}
+.chains-stores__video {
+  position: relative;
+}
+.chains-stores__video-title {
+  position: absolute;
+  display: block;
+  bottom: 50px;
+  left: 140px;
+  width: 180px;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1.17;
+  text-align: left;
+  color: #ffffff;
+}
+.icons-row {
+  padding-top: 60px;
+}
+.essence {
+  padding-top: 60px;
+  padding-bottom: 20px;
+}
+.essence__qote {
+  margin-top: 30px;
+  padding: 20px 68px 20px 20px;
+  font-family: "Exo 2", sans-serif;
+  font-size: 25px;
+  font-weight: 700;
+  font-style: italic;
+  font-stretch: normal;
+  line-height: 1.28;
+  background-color: #EFEFEF;
+  border-radius: 3px;
+}
+.qote__subtitle {
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  font-style: italic;
+  color: #868686;
+  padding-top: 15px;
+  padding-left: 20px;
+}
+.essence__video {
+  position: relative;
+}
+.essence__video-lint {
+  position: absolute;
+  display: block;
+  bottom: 50px;
+  left: 220px;
+  width: 300px;
+  font-size: 18px;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1.17;
+  text-align: left;
+  color: #ffffff;
+}
+.essence__name-wrapper {
+  position: relative;
+}
+.essence__name {
+  position: relative;
+  width: 160px;
+  font-size: 28px;
+  font-weight: 800;
+  font-style: italic;
+  line-height: 1.11;
+  color: #0d0d0d;
+}
+.essence__name:before {
+  position: absolute;
+  width: 128px;
+  height: 128px;
+  border-radius: 100px;
+  border: 5px solid #fff;
+  background-image: url(/img/igor.jpg);
+  content: '';
+  left: -140px;
+  top: -20px;
+}
+.essence__name-social-link {
+  position: absolute;
+  top: 0;
+  left: 100px;
+  display: block;
+  content: '';
+}
+.essence__right-col-text {
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: left;
+  padding-top: 15px;
+}
+.essence__list {
+  padding-top: 15px;
+}
+.essence__item {
+  padding-left: 20px;
+  position: relative;
+  font-family: 'Arial', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 5px;
+}
+.essence__item:before {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  background-color: #ffe200;
+  left: 0;
+  top: 6px;
+  content: '';
+  display: block;
+}
+.sell {
+  padding-top: 50px;
+}
+.sell .container {
+  padding-left: 35px;
+  padding-right: 35px;
+  background-color: #efefef;
+  border-radius: 5px;
+}
+.sell__numder {
+  font-size: 200px;
+  font-weight: 900;
+  line-height: 1;
+}
+.sell__numder span {
+  font-size: 60px;
+  margin-left: -20px;
+}
+.sell__numder-subtitle {
+  font-size: 16px;
+  font-weight: 800;
+  font-family: "Exo 2", sans-serif;
+}
+.sell__title {
+  padding-top: 30px;
+}
+.sell-footer__title {
+  padding-top: 15px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
+}
+.sell-footer__site {
+  padding-top: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: "Exo 2", "Arial", sans-serif;
+}
+.sell-footer__site-link {
+  font-size: 18px;
+  font-weight: 500;
+  color: #0d0d0d;
+  border-bottom: 1px solid #0d0d0d;
+}
+.sell-footer__site-link:hover {
+  text-decoration: none;
+}
+.sell-footer__list {
+  padding-top: 70px;
+}
+.sell-footer-item {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  text-align: center;
+  font-size: 12px;
+  margin-top: 5px;
+}
+.sell-footer-item__img {
+  width: 40%;
+  height: 55px;
+}
+.care {
+  padding-top: 90px;
+  padding-bottom: 20px;
+}
+.care h2 {
+  width: 70%;
+}
+.care p {
+  width: 78%;
+}
+.care .care-item__description {
+  width: 100%;
+}
+.care-list {
+  text-align: center;
+  padding-top: 45px;
+}
+.care-item__title {
+  padding-top: 30px;
+  font-weight: bold;
+}
+.care-item__description {
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-family: 'Arial', sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+}
+.proposal {
+  padding-top: 40px;
+  padding-bottom: 60px;
+  text-align: center;
+}
+.proposal h2 {
+  font-size: 83px;
+  line-height: 102px;
+}
+.proposal p {
+  padding-top: 30px;
+  width: 80%;
+  margin: auto;
+  display: block;
+  font-family: "Exo 2", sans-serif;
+  font-size: 25px;
+  font-weight: 500;
+  font-style: italic;
+  line-height: 1.36;
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .sell {
+    padding-bottom: 60px;
+    position: relative;
+  }
+  .sell .container {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .sell .container:before {
+    position: absolute;
+    display: block;
+    top: 50px;
+    bottom: 0;
+    content: '';
+    left: 5%;
+    width: 90%;
+    background-color: #efefef;
+    border-radius: 5px;
+    box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.16);
+    z-index: -1;
+  }
+  .sell-footer {
+    margin-top: 20px;
+    z-index: 5;
+    position: relative;
+    padding-bottom: 20px;
+  }
+  .sell-footer:before {
+    width: 110%;
+    left: -5%;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: '';
+    display: block;
+    background-color: #f5f5f5;
+  }
+  .sell__right-col {
+    padding-left: 60px;
+  }
+  .sell-footer__list {
+    padding-top: 0;
+  }
+  .sell-footer__list {
+    padding-left: 60px;
+  }
+  .sell-footer-item {
+    padding-top: 5px;
+    width: 16.6%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (max-width: 767px) {
+  h2 {
+    font-family: "Exo 2", sans-serif;
+    font-size: 19px;
+    font-weight: 900;
+    font-style: italic;
+    line-height: 1;
+  }
+  .bottom-line:before {
+    width: 130px;
+    height: 2px;
+    bottom: -7px;
+  }
+  p {
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+    padding-top: 15px;
+  }
+  .subtitle {
+    padding-top: 15px;
+    font-family: 'Arial', sans-serif;
+    font-size: 12px;
+    line-height: 1.5;
+    text-align: left;
+    color: #0d0d0d;
+  }
 }
