--- a/less/blocks/format.less
+++ b/less/blocks/format.less
@@ -38,6 +38,7 @@
   font-family: Arial;
   font-size: 16px;
   text-align: center;
+  padding-bottom: 10px;
 }
 .format-item__cost{
   padding-top: 30px;
