--- a/less/style.less
+++ b/less/style.less
@@ -13,3 +13,6 @@
 @import "blocks/sell.less";
 @import "blocks/care.less";
 @import "blocks/proposal.less";
+@import "blocks/get.less";
+@import "blocks/installation.less";
+@import "blocks/technologies.less";
