--- a/less/style.less
+++ b/less/style.less
@@ -16,3 +16,5 @@
 @import "blocks/get.less";
 @import "blocks/installation.less";
 @import "blocks/technologies.less";
+@import "blocks/presentation.less";
+@import "blocks/personal.less";
