--- a/less/global/base.less
+++ b/less/global/base.less
@@ -176,6 +176,8 @@ p {
 
 .bottom-line {
   position: relative;
+  padding-bottom: 30px;
+  line-height: 1;
   &:before {
     position: absolute;
     content: '';
@@ -184,7 +186,7 @@ p {
     width: 230px;
     height: 4px;
     background-color: #ffe200;
-    bottom: -20px;
+    bottom: 0;
     border-radius: 50px;
   }
   &--header:before {
