--- a/less/blocks/personal.less
+++ b/less/blocks/personal.less
@@ -1,25 +1,44 @@
-.personal{
+.personal {
   padding-top: 80px;
 }
 
-.personal-aside{
+.personal-aside__wrapper {
   background-color: #fafafa;
+  margin-top: -30px;
+  padding-top: 1px;
+  padding-left: 30px;
+  padding-right: 25px;
+  margin-left: -15px;
+  margin-right: -15px;
+  border-radius: 5px;
 }
 
-
-.personal-aside__list{
+.personal-aside__list {
   padding-top: 30px;
 }
 
-.personal-aside___item{
+.personal-aside___item {
   padding-bottom: 15px;
   font-weight: normal;
-  &:before{
+  &:before {
     width: 27px;
     height: 32px;
     line-height: 1.19;
     letter-spacing: normal;
     text-align: left;
     color: #ffe200;
+    background: url("/img/icons/question-button.svg");
   }
+}
+
+.personal__btn{
+  margin: auto;
+  margin-top: 15px;
+  display: block;
+
+}
+.personal__phone{
+  margin-top: 15px;
+  display: inline-block;
+  margin-left: 80px;
 }
