--- a/less/style.less
+++ b/less/style.less
@@ -18,3 +18,11 @@
 @import "blocks/technologies.less";
 @import "blocks/presentation.less";
 @import "blocks/personal.less";
+@import "blocks/data-base.less";
+@import "blocks/audience.less";
+@import "blocks/marketing.less";
+@import "blocks/promotion.less";
+@import "blocks/control.less";
+@import "blocks/profit.less";
+@import "blocks/appeal.less";
+@import "blocks/footer.less";
