--- a/less/blocks/profit.less
+++ b/less/blocks/profit.less
@@ -1,3 +1,24 @@
 .profit{
-  padding-top: 80px;
+  padding-top: 90px;
+}
+.profit__list{
+  padding-left: 30px;
+}
+.profit__item{
+  font-size: 16px;
+  font-weight: normal;
+  font-family: @arial;
+  padding-left: 0;
+  & span{
+    font-size: 10px;
+  }
+  &:before{
+    display: none;
+  }
+}
+.plan__link{
+  margin-top: 15px;
+  display: inline-block;
+  border-bottom: 1px solid #C7C7C7 ;
+  color: #0D0D0D;
 }
