--- a/less/style.less
+++ b/less/style.less
@@ -21,8 +21,11 @@
 @import "blocks/data-base.less";
 @import "blocks/audience.less";
 @import "blocks/marketing.less";
+@import "blocks/plan.less";
 @import "blocks/promotion.less";
 @import "blocks/control.less";
 @import "blocks/profit.less";
 @import "blocks/appeal.less";
+@import "blocks/form.less";
+@import "blocks/slogan.less";
 @import "blocks/footer.less";
