--- a/less/blocks/marketing.less
+++ b/less/blocks/marketing.less
@@ -2,3 +2,10 @@
   margin-top: 100px;
   margin-bottom: 100px;
 }
+.marketing__img-wrapper{
+  min-height: 225px;
+  margin-top: 30px;
+  & img{
+    margin-left: 30px;
+  }
+}
