--- a/css/style.css
+++ b/css/style.css
@@ -421,58 +421,58 @@ template {
   font-family: 'rouble';
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/rouble.ttf") format("truetype");
+  src: url("/fonts/rouble.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: normal;
   font-weight: 400;
-  src: local("Exo 2"), local("Exo2"), url("../fonts/Exo2.0-Regular.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Regular.ttf") format("truetype");
+  src: local("Exo-2"), local("Exo2"), url("/fonts/Exo2.0-Regular.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: italic;
   font-weight: 400;
-  src: local("Exo 2"), local("Exo2"), url("../fonts/Exo2.0-Italic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Italic.ttf") format("truetype");
+  src: local("Exo-2"), local("Exo2"), url("/fonts/Exo2.0-Italic.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-Italic.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: normal;
   font-weight: 700;
-  src: local("Exo 2 Bold"), local("Exo2-Bold"), url("../fonts/Exo2.0-Bold.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Bold.ttf") format("truetype");
+  src: local("Exo-2 Bold"), local("Exo2-Bold"), url("/fonts/Exo2.0-Bold.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-Bold.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: italic;
   font-weight: 700;
-  src: local("Exo 2 Bold Italic"), local("Exo2-Bold-Italic"), url("../fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
+  src: local("Exo-2 Bold Italic"), local("Exo2-Bold-Italic"), url("/fonts/Exo2.0-BoldItalic.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-BoldItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: italic;
   font-weight: 300;
-  src: local("Exo 2 Medium Italic"), local("Exo2-Medium-Italic"), url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+  src: local("Exo-2 Medium Italic"), local("Exo2-Medium-Italic"), url("/fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: normal;
   font-weight: 300;
-  src: local("Exo 2 Medium "), local("Exo2-Medium"), url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
+  src: local("Exo-2 Medium "), local("Exo2-Medium"), url("/fonts/Exo2.0-Medium.otf?") format("embedded-opentype"), url("/fonts/ttf/Exo2-Medium.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: italic;
   font-weight: 900;
-  src: local("Exo 2 Black Italic"), local("Exo2-Medium-Italic"), url("../fonts/Exo2.0-MediumItalic.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-MediumItalic.ttf") format("truetype");
+  src: local("Exo-2 Black Italic"), local("Exo2-Medium-Italic"), url("/fonts/ttf/Exo2-BlackItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: 'Exo 2';
+  font-family: 'Exo-2';
   font-style: normal;
   font-weight: 900;
-  src: local("Exo 2 Black "), local("Exo2-Black"), url("../fonts/Exo2.0-Medium.otf?") format("embedded-opentype"), url("../fonts/ttf/Exo2-Medium.ttf") format("truetype");
+  src: local("Exo-2 Black "), local("Exo2-Black"), url("/fonts/ttf/Exo2-Black.ttf") format("truetype");
 }
 body {
-  font-family: "Exo 2", "Arial", sans-serif;
+  font-family: "Exo-2", "Arial", sans-serif;
   background-color: #fff;
   color: #0d0d0d;
   line-height: 1.5;
@@ -494,7 +494,7 @@ h2 {
   margin: 0;
 }
 h3 {
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-size: 31px;
   font-weight: bold;
   font-style: italic;
@@ -1122,7 +1122,7 @@ button {
 .sell__numder-subtitle {
   font-size: 16px;
   font-weight: 800;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
 }
 .sell__title {
   padding-top: 30px;
@@ -1212,7 +1212,7 @@ button {
   width: 80%;
   margin: auto;
   display: block;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-size: 25px;
   font-weight: 500;
   font-style: italic;
@@ -1234,7 +1234,7 @@ button {
   display: block;
   color: #fff;
   font-style: italic;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-weight: bold;
   font-size: 18px;
 }
@@ -1400,7 +1400,7 @@ button {
   border-radius: 5px;
   background-color: #efefef;
   padding: 20px 50px 20px 19px;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-size: 20px;
   font-weight: 800;
   font-style: italic;
@@ -1541,7 +1541,7 @@ button {
   text-shadow: 4px 4px 0 rgba(0, 0, 0, 0.7);
 }
 .data-base__number {
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-size: 106px;
   font-weight: bold;
   font-style: italic;
@@ -1604,14 +1604,14 @@ button {
   font-size: 83px;
   font-weight: 900;
   font-style: italic;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   line-height: 1;
 }
 .plan__subtitle {
   margin-top: 19px;
   font-size: 30px;
   line-height: 1.5;
-  font-family: "Exo 2", sans-serif;
+  font-family: "Exo-2", sans-serif;
   font-weight: 900;
   font-style: italic;
   margin-bottom: 100px;
@@ -1637,6 +1637,7 @@ button {
   padding-top: 90px;
 }
 .profit__list {
+  padding-top: 15px;
   padding-left: 30px;
 }
 .profit__item {
@@ -1788,7 +1789,7 @@ button {
 }
 @media (max-width: 767px) {
   h2 {
-    font-family: "Exo 2", sans-serif;
+    font-family: "Exo-2", sans-serif;
     font-size: 19px;
     font-weight: 900;
     font-style: italic;
